--- a/dev.toml
+++ b/dev.toml
@@ -1,17 +1,19 @@
 [project]
 name = "dev-tools"
 
+[lib]
+path = "dev"
+
 [fetch.pkgs]
 name = "nixpkgs"
 import = true
 args = [{}]
 
-[composer]
-features = ["std"]
-std.features = ["pkg_lib"]
+[compose.features]
+atom = ["std"]
+std  = ["pkg_lib"]
 
-[backends.nix]
-root = "dev"
+[backend.nix]
 # default when `eka` cli is ready
 # fetcher = "native"
 fetcher = "npins"
