chore: add formatters & run them

--- a/treefmt.toml
+++ b/treefmt.toml
@@ -1,11 +1,23 @@
 [formatter.nix]
 command = "nixfmt"
 options = []
-includes = [ "*.nix" ]
+includes = ["*.nix"]
 excludes = []
 
 [formatter.sh]
 command = "shfmt"
 options = []
-includes = [ "*.sh" ]
+includes = ["*.sh", ".envrc"]
 excludes = []
+
+[formatter.toml]
+command = "taplo"
+options = ["fmt"]
+includes = ["*.toml"]
+excludes = []
+
+[formatter.prettier]
+command = "prettier"
+options = ["--write"]
+includes = ["*.json", "*.md", "*.yaml", "*.yml"]
+excludes = ["*/sources.json"]
