fix: update `project` to `atom`

--- a/compose.toml
+++ b/compose.toml
@@ -1,4 +1,4 @@
-[project]
+[atom]
 name = "modules"
 version = "0.2.0"
 description = "A purpose built, unopinionated, and performant module system for Nix code."
