--- a/std.toml
+++ b/std.toml
@@ -1,4 +1,4 @@
-[project]
+[atom]
 name = "std"
 version = "0.2.0"
 description = "Nix Standard Library"
@@ -13,13 +13,10 @@ type = "lib"
 # TODO: fetched at buildtime
 # type = "src"
 
-[atom]
-path = "std"
-
 [backend.nix]
 fetcher = "npins"
 
-[project.meta]
+[atom.meta]
 # special attribute
 # for the Nix std library
 __is_std__ = true
