style: reorganize src into its own module

--- a/src/atom.toml
+++ b/src/atom.toml
@@ -1,6 +1,6 @@
 [atom]
-name = "modules"
-version = "0.2.0"
+name = "atom"
+version = "0.3.0"
 description = "A purpose built, unopinionated, and performant module system for Nix code."
 
 [features]
