--- a/src/dev.toml
+++ b/src/dev.toml
@@ -8,7 +8,7 @@ args = [{}]
 
 [compose.features]
 atom = ["std"]
-std = ["pkg_lib"]
+std = ["lib"]
 
 [backend.nix]
 # default when `eka` cli is ready
