fix: enter direnv faster on clean git

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,8 @@
-eval "$(nix print-dev-env -f shell.nix)"
+watch_file shell.nix src/dev
+
+if git diff-index --quiet HEAD shell.nix src/dev && [[ -h .direnv/shell ]]; then
+  . <(nix print-dev-env ".direnv/shell" 2>/dev/null)
+else
+  drv="$(nix-instantiate shell.nix --add-root .direnv/shell)"
+  . <(nix print-dev-env "$drv" 2>/dev/null)
+fi
