--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,7 @@
 watch_file shell.nix src/dev
 
 if git diff-index --quiet HEAD shell.nix src/dev && [[ -h .direnv/shell ]]; then
-  . <(nix print-dev-env ".direnv/shell" 2>/dev/null)
+  . <(nix print-dev-env ".direnv/shell" 2>/dev/null || rm .direnv/shell)
 else
   drv="$(nix-instantiate shell.nix --add-root .direnv/shell)"
   . <(nix print-dev-env "$drv" 2>/dev/null)
