fix: reload shell only when files change
direnv uses a hash of the files in the watch list to generate a sum,
so if any of them change the sum will change. The shell will reload
without rebuilding whenever it doesn't, leading to much faster shell
load in the majority of cases.

--- a/.envrc
+++ b/.envrc
@@ -1,8 +1,17 @@
-watch_file shell.nix src/dev
+files=(shell.nix src/dev/shell.nix)
 
-if git diff-index --quiet HEAD shell.nix src/dev && [[ -h .direnv/shell ]]; then
-  . <(nix print-dev-env ".direnv/shell" 2>/dev/null || rm .direnv/shell)
+watch_file "${files[@]}"
+
+sum_files () {
+  sha256sum "$@" | sha256sum | cut -d ' ' -f 1
+}
+
+sum="$(sum_files "${files[@]}")"
+sum_file=".direnv/sum-$sum"
+
+if [[ -a "$sum_file" ]] && [[ -h .direnv/shell ]]; then
+  . <(nix print-dev-env ".direnv/shell" 2>/dev/null || rm "$sum_file")
 else
   drv="$(nix-instantiate shell.nix --add-root .direnv/shell)"
-  . <(nix print-dev-env "$drv" 2>/dev/null)
+  . <(nix print-dev-env "$drv" 2>/dev/null && rm -f .direnv/sum-* && touch "$sum_file")
 fi
