fix: align API with eka's current implementation

--- a/src/core.toml
+++ b/src/core.toml
@@ -1,5 +1,5 @@
 [atom]
-name = "core"
+id = "core"
 version = "0.3.0"
 description = "A purpose built, unopinionated, and performant module system for Nix code."
 
